# wiznote-mcp

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  pyproject.toml  wiznote_cli.py  wiznote_mcp.py
docs/releases/: release-notes.md
tests/: test_cli.py  test_mcp.py  test_mcp_live.py
